--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,27 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  min-height: 100vh;
+  width: 100%;
+}
+
+h1 {
+  margin-block: 4px;
+}
+
 body {
   font-family: Arial, sans-serif;
   text-align: center;
   background-color: #f0f0f0;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #game-container {
@@ -17,13 +36,16 @@ body {
 .cell {
   width: 100px;
   height: 100px;
-  border: 2px solid #000;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2em;
   cursor: pointer;
-  background-color: white;
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.cell:hover{
+  background-color: #d9d9d9;
 }
 
 .hidden {
